# git-workshop

./: .gitignore  env.yml  nonstandardcode.py  pyproject.toml  setup.cfg  setup.py  simple_functions.py
.github/workflows/: ci.yml  test.yml
scripts/: ingest_data_script.py  score_script.py  train_script.py
src/: main.py
src/my_package/: ingest_data.py  nonstandardcode.py  score.py  train.py
src/mypackage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_build.py  test_ingest_data.py  test_package_installation.py  test_score.py  test_train.py
tests/unit_tests/: test_ingest_data.py  test_score.py  test_train.py
